tree-sitter-slop/test/corpus/basics.txt
================================================================================
Simple expression
================================================================================

(+ 1 2)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (number)
    (number)))

================================================================================
Function definition
================================================================================

(fn add ((x Int) (y Int))
  (+ x y))

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (list
      (list (identifier) (type_name))
      (list (identifier) (type_name)))
    (list
      (identifier)
      (identifier)
      (identifier))))

================================================================================
Type definition with range
================================================================================

(type Age (Int 0 .. 150))

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (type_name)
    (list
      (type_name)
      (number)
      (range_dots)
      (number))))

================================================================================
Record type
================================================================================

(type User (record
  (name String)
  (age Int)))

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (type_name)
    (list
      (identifier)
      (list (identifier) (type_name))
      (list (identifier) (type_name)))))

================================================================================
Enum type
================================================================================

(type Status (enum active inactive deleted))

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (type_name)
    (list
      (identifier)
      (identifier)
      (identifier)
      (identifier))))

================================================================================
Quoted symbol
================================================================================

'ok

--------------------------------------------------------------------------------

(source_file
  (quoted_symbol))

================================================================================
Comment
================================================================================

; This is a comment
(+ 1 2)

--------------------------------------------------------------------------------

(source_file
  (comment)
  (list
    (identifier)
    (number)
    (number)))

================================================================================
Hole expression
================================================================================

(hole Bool "Check if user is adult"
  :complexity tier-1)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (type_name)
    (string)
    (keyword)
    (identifier)))

================================================================================
Module definition
================================================================================

(module user-service
  (export (create 1)))

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (list
      (identifier)
      (list (identifier) (number)))))

================================================================================
Annotations
================================================================================

(fn test ()
  (@intent "Test function")
  (@pre (> x 0))
  x)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (list)
    (list (annotation) (string))
    (list (annotation) (list (identifier) (identifier) (number)))
    (identifier)))

================================================================================
Boolean and nil
================================================================================

(if true nil false)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (boolean)
    (nil)
    (boolean)))

================================================================================
String with escapes
================================================================================

"hello \"world\""

--------------------------------------------------------------------------------

(source_file
  (string))
