tree-sitter-slop/test/corpus/syntax.txt
================================================================================
Exponent floats
================================================================================

(f 1.5e-3 2E-3 1.0e+307 -7 3.14)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (number)
    (number)
    (number)
    (number)
    (number)))

================================================================================
Range type without spaces
================================================================================

(type Small (Int 0..9))

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (type_name)
    (list
      (type_name)
      (number)
      (range_dots)
      (number))))

================================================================================
$result in prefix and infix contracts
================================================================================

(fn f ()
  (@post (> $result 0))
  (@post {(. $result len) >= 1}))

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (list)
    (list
      (annotation)
      (list
        (identifier)
        (identifier)
        (number)))
    (list
      (annotation)
      (infix_expr
        (infix_binary
          (infix_group
            (identifier)
            (identifier)
            (identifier))
          (number))))))

================================================================================
Hyphenated annotation
================================================================================

(@callback-assume g {$callback-arg > 0})

--------------------------------------------------------------------------------

(source_file
  (list
    (annotation)
    (identifier)
    (infix_expr
      (infix_binary
        (identifier)
        (number)))))

================================================================================
Capitalized quoted symbol
================================================================================

(match v ('Fizz 1))

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (list
      (quoted_symbol)
      (number))))

================================================================================
UPPER_SNAKE constant
================================================================================

(const MAX_CONN Int 128)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (type_name)
    (type_name)
    (number)))

================================================================================
Keyword arguments
================================================================================

(g :c-name "main" :arena a)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (keyword)
    (string)
    (keyword)
    (identifier)))

================================================================================
mut parameter
================================================================================

(fn f ((mut x T)) x)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (list
      (list
        (identifier)
        (identifier)
        (type_name)))
    (identifier)))

================================================================================
mut let binding
================================================================================

(let ((mut x Int 0)) x)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (list
      (list
        (identifier)
        (identifier)
        (type_name)
        (number)))
    (identifier)))

================================================================================
Infix and with unary not
================================================================================

{a < b and not c}

--------------------------------------------------------------------------------

(source_file
  (infix_expr
    (infix_binary
      (infix_binary
        (identifier)
        (identifier))
      (infix_unary
        (identifier)))))

================================================================================
Equality binds looser than comparison
================================================================================

{a == b < c}

--------------------------------------------------------------------------------

(source_file
  (infix_expr
    (infix_binary
      (identifier)
      (infix_binary
        (identifier)
        (identifier)))))

================================================================================
Infix unary minus
================================================================================

{-x < 0}

--------------------------------------------------------------------------------

(source_file
  (infix_expr
    (infix_binary
      (infix_unary
        (identifier))
      (number))))
